--- a/core/templates/core/vue/status-tutorial.html
+++ b/core/templates/core/vue/status-tutorial.html
@@ -1,10 +1,9 @@
 <div>
-    <b-modal id="modal-1" scrollable ok-only title="Tutorial">
+    <b-modal id="modal-1" scrollable ok-only title="Guide to Analysis Status Page v.0.0.1">
       <h4>Hi! :)</h4>
       <h5>Welcome to Analysis Pipeline Status Page.</h5>
       <p>
-        This is still beta, and there are still a lot of work to be done.<br>
-        I wrote a basic instruction on how to use this page, but these information might change as further changes are made.
+        This is beta, and there are still a lot of work to be done.<br>
       </p>
       <br>
       <h5>So, what is this and why do I need this in my life?</h5>
@@ -19,11 +18,11 @@
       <p>
         If you work on a wetlab located in 3rd floor, just press
       <button class="project-button" squared><span>Wetlab</span></button>
-        located in left menu.
+        located on left menu.
         This should load all the analyses that are:<br>
         <b>1. Updated within last two weeks.</b><br>
-        <b>2. Related to sequencings with mismatching number of lanes to requested lane number.</b><br><br>
-        <b>3. Library has to be post 2019</b><br>
+        <b>2. Related to sequencings with mismatching number of lanes to requested lane number.</b><br>
+        <b>3. Library has to be post 2019</b><br><br>
         But let's say you want to create your own list.<br>
         Then simply click  <md-icon>add</md-icon> located in lower left corner. <br>
         This will take you to <b>ProjectTag</b> create page.<br>
@@ -32,9 +31,9 @@
         attached to that samples.<br>
         Similarly, use <md-icon>remove</md-icon> to remove <b>ProjectTag</b>
       </p>
-
+      <br>
       <h5>Your table is weird and ugly, and I do not understand it</h5>
-      <p>Let us now look at how we interpret the table.</p><br>
+      <p>Let us now look at how we interpret the table.</p>
       <h6>Colour of the rows</h6>
       <p>
         Ok firstly if the row is pretty mint green<br>
@@ -60,18 +59,19 @@
         You can simply hover over the cell to see this information.<br>
       </p>
       <br>
-      <h6>I want Montage.</h6>
+      <h6>I want Montage</h6>
       <p>
         If the Montage is marked as <b-button squared class="row-button ln110">N/A</b-button>, analysis is not yet uploaded to Montage.<br>
       </p>
       <br>
       <h6>This is not enough, I demand more.</h6>
       <p>
-        Yes this is incomplete at the moment, and a lot of features will be added and polished depending on how people like it.<br>
+        Yes this is incomplete at the moment, these things will be added soon:<br>
         <b>
-          1. Column  Sorting.<br>
-          2. Search.<br>
-          3. Faster Loading.<br>
+          1. Column  Sorting<br>
+          2. Search<br>
+          3. Faster Loading<br>
+          4. ProjectTag Edit<br>
         </b>
         If you notice that something is broken, or want something more, please contact the dev team.
         <br>
