--- a/core/templates/core/vue/status-selection.html
+++ b/core/templates/core/vue/status-selection.html
@@ -4,10 +4,10 @@
 {% block body %}
 
 <div id="app">
-  <!-- {% verbatim %}{{ preSamples }}{% endverbatim %} -->
   <div class="centered-container">
     <b-modal id="my-modal" ok-only>{{error}}</b-modal>
-    <form action="{% url 'core:pipeline_status_create' %}" method="POST" class="md-layout">
+    <!-- <form action="{% url 'core:pipeline_status_create' %}" method="POST" class="md-layout"> -->
+      <form>
         {% csrf_token %}
         <md-card class="md-layout-item">
             <md-card-header>
@@ -18,23 +18,23 @@
                   <div class="md-layout-item">
                     <md-field >
                     <label for="title">Title</label>
-                    <md-input name="title" id="first-name" autocomplete="given-name"  />
+                    <md-input v-model="title" id="first-name" autocomplete="given-name"  />
                     </md-field>
                   </div>
               </div>
               <div class="md-layout md-gutter">
-                  
+
                 <div class="md-layout-item">
                     <b-row >
                         <b-col>
-                            <i class="fa fa-child" ></i></i> Samples:
-                            <b-form-input v-model="searchSampleKey"></b-form-input>
+                            <i class="fa fa-child" ></i></i> Libraries:
+                            <b-form-input v-model="searchSample"></b-form-input>
                             <b-form-select v-model="preSelected" :options="sampleDisplay" multiple :select-size="4"></b-form-select>
                             <b-button class="my-button"  v-on:click="addSelected" variant="primary">Add</b-button>
                         </b-col>
                         <b-col>
                             <i class="fa fa-edit"></i> Selected:
-                            <b-form-input v-model="searchSelectedKey"></b-form-input>
+                            <b-form-input v-model="searchSelected"></b-form-input>
                             <b-form-select v-model="postSelected" :options="selectedDisplay" multiple :select-size="4"></b-form-select>
                             <b-button class="my-button" v-show="!selectedEmpty" v-on:click="removeAll" variant="primary">Remove All</b-button>
                             <b-button class="my-button  remove-button" v-show="!selectedEmpty" v-on:click="removeSelected" variant="primary">Remove</b-button>
@@ -45,12 +45,13 @@
               </div>
               <div>
                   <strong>Selected samples:</strong>
-                  <span>{% verbatim %}{{ postSamplesNames }}{% endverbatim %}</span>
+                  <span>{% verbatim %}{{ samplesSelected }}{% endverbatim %}</span>
               </div>
 
               <div class="actions md-layout md-alignment-center-space-between">
                 <a href="{% url 'core:pipeline_status' %}">I already have my project</a>
-                <md-button class="md-raised md-primary" type="submit" name="create" value="Ok" @click="createTag">Create</md-button>
+                <!-- <md-button class="md-raised md-primary" type="submit" name="create" value="Ok" @click="createTag">Create</md-button> -->
+                <md-button class="md-raised md-primary" name="create" @click="createTag">Create</md-button>
               </div>
 
             </md-card-content>
@@ -63,55 +64,77 @@
   vm = new Vue({
     el: '#app',
     data: () => ({
+      title: "",
       searchKey: "",
-      searchSampleKey: "",
-      searchSelectedKey: "",
-      preSamples: [],
-      postSamples: [],
-      postSamplesNames: [],
-      preSelected: [],
-      postSelected: [],
-      samples: [],
-      selectedEmpty: true
+          searchSample: "",
+          searchSelected: "",
+          preSelected: [],
+          postSelected: [],
+          allSamples: [],
+          selectedEmpty: true,
+          samplesSelected: [],
+
     }),
     methods: {
-      addSelected() {
-        for (var i=0; i < this.preSamples.length; i++){
-          if (this.preSelected.includes(this.preSamples[i].value)){
-             // vm.$set(vm.preSamples[i], userselect, true)
-            this.preSamples[i].userselect = true
-            console.log(`adding ${this.preSamples[i].text}`)
-            this.postSamples.push(this.preSamples[i])
-            this.postSamplesNames.push(this.preSamples[i].text)
+      addSelected: function() {
+        for (var i=0; i < this.allSamples.length; i++){
+          if (this.preSelected.includes(this.allSamples[i].value)){
+            Vue.set(this.allSamples[i], "userselect", true)
+            this.samplesSelected.push(this.allSamples[i].text)
           }
         }
         this.showRemoveButton()
       },
       removeSelected: function() {
-        for (var i=0; i < this.preSamples.length; i++){
-          if (this.postSelected.includes(this.preSamples[i].value)){
-            console.log(`removing ${this.preSamples[i].text}`)
-            this.preSamples[i].userselect = false
-            // vm.$set(vm.preSamples[i], userselect, false)
-            this.postSamples.pop(this.preSamples[i])
-            this.postSamplesNames.pop(this.preSamples[i].text)
+        for (var i=0; i < this.allSamples.length; i++){
+          if (this.postSelected.includes(this.allSamples[i].value)){
+            console.log(`removing ${this.allSamples[i].text}`)
+            Vue.set(this.allSamples[i], "userselect", false)
+            this.samplesSelected.pop(this.allSamples[i].text)
           }
         }
         this.showRemoveButton()
       },
-
-      removeAll() {
-        this.postSamples = []
-        this.selectedEmpty = true
-        this.postSamplesNames = []
+      removeAll: function() {
+          for (var i=0; i < this.allSamples.length; i++){
+            if (this.allSamples[i].userselect) {
+              console.log(`removing ${this.allSamples[i].text}`)
+              this.allSamples[i].userselect = false
+            }
+            this.samplesSelected = []
+          }
+          this.showRemoveButton()
       },
-
       showRemoveButton: function() {
-        this.selectedEmpty = this.postSamples.length === 0
-
+        this.selectedEmpty = (this.samplesSelected.length == 0 ? true: false)
       },
-      createTag() {
 
+      createTag: function(){
+        var selectedlist = []
+        for (var i=0; i < this.allSamples.length; i++){
+            if (this.allSamples[i].userselect) {
+              selectedlist.push(this.allSamples[i].value)
+          }
+        }
+        console.log(`SELECTED LIST ${selectedlist}`)
+        axios(
+          {
+            method: 'post',
+            url: window.origin + "/core/status/create_tag",
+            dataType: "json",
+            data: {
+              "title": this.title,
+              "selected" : selectedlist
+              },
+            headers: {
+              "X-CSRFToken": Cookies.get('csrftoken'),
+              "content-type": "application/json"
+            }
+          }
+        ).then( (response) => {
+          this.results = response.data
+          }
+        )
       }
     },
     computed: {
@@ -119,18 +142,18 @@
         return this.selectedSamples.map(s => s.text)
       },
       sampleDisplay() {
-        console.log("HELLO")
-        var filter = this.searchSampleKey
-        search_results = this.preSamples.filter(function (sample) {
+        // Right now this is only called when searchSample is changing. 
+        // Doesnt detect when allSamples changes since its an object...
+        var filter = this.searchSample
+        search_results = this.allSamples.filter(function (sample) {
           return !sample.userselect && sample.text.toLowerCase().includes(filter.toLowerCase())
         })
         search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
         return search_results
       },
       selectedDisplay() {
-        var filter = this.searchSelectedKey
-
-        search_results = this.postSamples.filter(function (sample) {
+        var filter = this.searchSelected
+        search_results = this.allSamples.filter(function (sample) {
           return sample.userselect && sample.text.toLowerCase().includes(filter.toLowerCase())
         })
         search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
@@ -142,27 +165,13 @@
     },
     created () {
       this.error = "{{error}}";
-      
       console.log(this.error)
-      this.samples = JSON.parse(unescape("{{samples| safe | escapejs}}"))
-      this.preSamples = JSON.parse(unescape("{{samples| safe | escapejs}}"))
-      console.log(this.samples)
-      console.log(this.preSamples)
-      // for (var i=0; i < this.preSamples.length; i++){
-      //   vm.$set(vm.preSamples[i], userselect, false)
-      // }
-      this.preSamples.forEach((sample) => 
-        sample.userselect = false
-      )
+      this.allSamples = JSON.parse(unescape("{{samples| safe | escapejs}}"))
     },
   })
 </script>
 
 <style>
-.my-button {  
-  float: right;
-  margin-top: 0.3em
-}
 .centered-container {
   display: flex;
   align-items: center;
@@ -186,14 +195,10 @@ span {
   background-color: #4c86e6;
   border-color: #4c86e6;
 }
-.submit-button {
-    float: right;
-    margin-top: 0.3em
-}
+
 .remove-button {
     margin: 5px;
 }
 </style>
 
 {% endblock %}
-
