--- a/core/templates/core/vue/status-tutorial.html
+++ b/core/templates/core/vue/status-tutorial.html
@@ -29,7 +29,8 @@
         <b>ProjectTag</b> is a new model we came up with. It currently only has 2 fields: Title and samples. 
         You set the title and add all the samples you want to attach, then the table will be populated with all the analyses 
         attached to that samples.<br>
-        Similarly, use <md-icon>remove</md-icon> to remove <b>ProjectTag</b>
+        Similarly, use <md-icon>remove</md-icon> to remove <b>ProjectTag</b>.<br>
+        It does not auto refresh at the moment.
       </p>
       <br>
       <h5>Your table is weird and ugly, and I do not understand it</h5>
@@ -56,7 +57,7 @@
         <b-badge variant="info">Running</b-badge>
         <b-badge variant="dark">Idle</b-badge>
         <b-badge variant="danger">Error</b-badge><br>
-        You can simply hover over the cell to see this information.<br>
+        We will add a hover over the cell to show this information.<br>
       </p>
       <br>
       <h6>I want Montage</h6>
