--- a/core/templates/core/vue/status-tutorial.html
+++ b/core/templates/core/vue/status-tutorial.html
@@ -3,12 +3,12 @@
       <h4>Hi! :)</h4>
       <h5>Welcome to Analysis Pipeline Status Page.</h5>
       <p>
-        This is beta, and there are still a lot of work to be done.<br>
+        This is <b>BETA</b>, and there are still a lot of work to be done.<br>
       </p>
       <br>
       <h5>So, what is this and why do I need this in my life?</h5>
       <p>
-        I spend a lot of time on it and hopefully it means something in your life :( <br>
+        I spent a lot of time on it and hopefully it means something in your life :( <br>
         This page exists to help you track status of analyses.<br>
         We reckon that it is slightly inconvenient to have multiple pages open to track analyses,
         so we came up with this page to display all related information from different sources.
@@ -22,7 +22,7 @@
         This should load all the analyses that are:<br>
         <b>1. Updated within last two weeks.</b><br>
         <b>2. Related to sequencings with mismatching number of lanes to requested lane number.</b><br>
-        <b>3. Library has to be post 2019</b><br><br>
+        <b>3. Library has to be post-2019</b><br><br>
         But let's say you want to create your own list.<br>
         Then simply click  <md-icon>add</md-icon> located in lower left corner. <br>
         This will take you to <b>ProjectTag</b> create page.<br>
