--- a/core/templates/core/vue/status-page.html
+++ b/core/templates/core/vue/status-page.html
@@ -26,6 +26,7 @@
                   </md-card-content>
                   <md-divider></md-divider>
                     <md-button @click="createTag()"><md-icon>add</md-icon></md-button>
+                    <md-button @click="removeTag()"><md-icon>remove</md-icon></md-button>
                 </md-card>
           </md-app-drawer>
     
