--- a/core/templates/core/vue/status-page.html
+++ b/core/templates/core/vue/status-page.html
@@ -34,7 +34,7 @@
               <div class="main-content">
                   <br />
                   <div class="sample-table">
-                      <b-button-group class="content-header" style="margin-top : 1px; height: 40px;">
+                      <b-button-group style="margin-top : 1px; height: 40px;">
                           <b-button squared class="menu-button" style="width:110px;">Submitted</b-button>
                           <b-button class="menu-button" style="width:130px;">Last Updated</b-button>
                           <b-button class="menu-button" style="width:140px;">sample ID</b-button>
